TOP 15 UI 개선 및 Script Chart-pie.js  코드 정리

--- a/index.html
+++ b/index.html
@@ -364,12 +364,17 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">Top 15 발생국가</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">TOP 15 발생국가</h6>
                   <div class="right"><a class="new_window" href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                 </div>
                 <!-- Card Body -->
                 <div class="card-body" id="Top5">
-                  <h4 class="small font-weight-bold top_title">
+                  <div class="korea_chart_tags">
+                    <span class="tag_05">사망자수</span>
+                    <span class="tag_02">완치자수</span>
+                    <span class="tag_04">확진자수</span>
+                  </div>
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -377,7 +382,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -385,7 +390,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -393,7 +398,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -401,7 +406,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -409,7 +414,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -417,7 +422,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -425,7 +430,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -433,7 +438,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -441,7 +446,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -449,7 +454,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -457,7 +462,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -465,7 +470,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -473,7 +478,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -481,7 +486,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small font-weight-bold top_title">
+                  <h4 class="small top_title">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
