Fix chart labels as well

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                     <div class="card-body">
                       <div class="chart-area" style="height:23rem;">
                           <div class="korea_chart_tags">
-                            <span class="tag_01">확진자수</span>
+                            <span class="tag_01">격리자수</span>
                             <span class="tag_02">사망자수</span>
                             <span class="tag_03">완치자수</span>
                           </div>
