--- a/index_world_chart.html
+++ b/index_world_chart.html
@@ -516,6 +516,9 @@
     // 배너를 숨기고 싶으면 아래 코드를 주석처리하세요
     //showBanner();
   </script>
+  
+  <!-- 한국 누적 데이터 -->
+  <script src="data/koreaRegionalCumulativeData.js"></script>
 
   <!-- 존스홉킨스 전세계 누적데이터 -->
   <script src="data/HopkinsCoronaWorldData.js"></script>
