--- a/index.html
+++ b/index.html
@@ -369,24 +369,26 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body" id="Top5">
+                  <div id="collapseTop15" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <!-- 그래프 그려지는 공간 -->
+                    <div style="height:35rem;"><canvas id="top15graph"></canvas></div>
+                  </div>
                   <div class="korea_chart_tags">
                     <span class="tag_05">사망자수</span>
                     <span class="tag_02">완치자수</span>
                     <span class="tag_04">확진자수</span>
                   </div>
+
                   <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
-                  <div id="collapseTop15" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
-                    <!-- 그래프 그려지는 공간 -->
-                  </div>
                   <div class="progress mb-4 top_progress">
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
 
-                  <h4 class="small top_title">
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -395,7 +397,7 @@
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
 
-                  <h4 class="small top_title">
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -403,7 +405,8 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small top_title">
+
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -411,7 +414,8 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small top_title">
+
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -419,7 +423,8 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small top_title">
+
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -427,7 +432,8 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small top_title">
+
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -435,7 +441,8 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small top_title">
+
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -443,7 +450,8 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small top_title">
+
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -451,7 +459,8 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small top_title">
+
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -459,7 +468,8 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small top_title">
+
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -467,7 +477,8 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small top_title">
+
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -475,7 +486,8 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small top_title">
+
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -483,7 +495,8 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small top_title">
+
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
@@ -491,7 +504,8 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <h4 class="small top_title">
+                  
+                  <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
                   <div class="progress mb-4 top_progress">
