차트버튼 추가

--- a/index_world_chart.html
+++ b/index_world_chart.html
@@ -76,22 +76,22 @@
       </div>
       <!-- Nav Item - Pages Collapse Menu -->
       <li class="nav-item">
-        <a class="nav-link" href="#casesStatus">
+        <a class="nav-link" href="./index.html/#casesStatus">
           <span>확진자 현황</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#koreaCasesStatus">
+        <a class="nav-link" href="./index.html/#koreaCasesStatus">
           <span>한국 현황</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#worldCasesStatus">
+        <a class="nav-link" href="./index.html/#worldCasesStatus">
           <span>세계 현황</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#jejuCasesStatus">
+        <a class="nav-link" href="./index.html/#jejuCasesStatus">
           <span>제주도 현황</span>
         </a>
       </li>
@@ -100,12 +100,12 @@
       <hr class="sidebar-divider">
 
       <li class="nav-item">
-        <a class="nav-link" href="#maskMap">
+        <a class="nav-link" href="./index.html/#maskMap">
           <span>마스크 재고 맵</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#jejuMedicine">
+        <a class="nav-link" href="./index.html/#jejuMedicine">
           <span>제주도 마스크, 손세정제 구입처</span>
         </a>
       </li>
@@ -114,7 +114,7 @@
 
       <!-- Nav Item - Pages Collapse Menu -->
       <li class="nav-item">
-        <a class="nav-link" href="#safetyRule">
+        <a class="nav-link" href="./index.html/#safetyRule">
           <span>안전수칙</span>
         </a>
       </li>
@@ -176,7 +176,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">TOP 15 발생국가</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">TOP 15 발생국가(클릭시 일일차트)</h6>
                   <div class="right"><a class="new_window" href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                 </div>
                 <!-- Card Body -->
@@ -316,7 +316,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">TOP 15 발생국가</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">TOP 15 발생국가 일일차트</h6>
                   <div class="right"><a class="new_window" href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                 </div>
                 <!-- Card Body -->
@@ -516,7 +516,7 @@
     // 배너를 숨기고 싶으면 아래 코드를 주석처리하세요
     //showBanner();
   </script>
-  
+
   <!-- 한국 누적 데이터 -->
   <script src="data/koreaRegionalCumulativeData.js"></script>
 
