--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  
+
                   <h4 class="small top_title" onclick="top15canvas()" data-toggle="collapse" data-target="#collapseTop15" aria-expanded="true" aria-controls="collapseTop15">
                     <span class="float-right"></span>
                   </h4>
@@ -513,6 +513,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
+                  <a target="_blank" class="btn btn-primary" style="width:100%; margin-top:1rem; margin-bottom:1rem;" href="./index_world_chart.html" role="button">각 나라별 일일차트 크게보기</a>
                 </div>
               </div>
             </div>
