Update mask map link

--- a/index.html
+++ b/index.html
@@ -738,13 +738,8 @@
                       <!-- <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem;margin-top:1rem; width:100%;" href="https://whereismask.com" role="button">주변 약국 위치 및 재고 현황</a> -->
                       <!-- <div id="jejuMedicineMap" style="width:100%;height:35rem;"></div> -->
                       <iframe src="https://mask.livecorona.co.kr#mainContainer" frameborder="0" style="border:0;width:100%;height:35rem;padding-top:0;"allow="geolocation"></iframe>
-
-                      <div style="padding-left:20px;">
-                        <ul class="mt10">
-                          <li>해당 기능은 'https'에서만 지원합니다. 맵이 뜨지 않을 경우 <a href="https://livecorona.co.kr/">여기</a>로 접속해주세요.</li>
-                          <li>우체국, 약국 전화해보시고 방문하시는 것이 좋습니다.</li>
-                          <li>마스크 <a href="https://coronamask.kr">온라인 구매</a> 바로가기</li>
-                        </ul>
+                      <div class="p-2">
+                        <a type="button" class="btn btn-block btn-info" href="https://mask.livecorona.co.kr" target="_blank" rel="noopener noreferrer">큰 화면에서 마스크 맵 열기</a>
                       </div>
                     </div>
                   </div>
