--- a/index.html
+++ b/index.html
@@ -737,9 +737,9 @@
                     <div class="card-body" style="padding-top:0px;padding-left: 0px;padding-right: 0px;">
                       <!-- <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem;margin-top:1rem; width:100%;" href="https://whereismask.com" role="button">주변 약국 위치 및 재고 현황</a> -->
                       <!-- <div id="jejuMedicineMap" style="width:100%;height:35rem;"></div> -->
-                      <iframe src="https://mask.livecorona.co.kr#mainContainer" frameborder="0" style="border:0;width:100%;height:35rem;padding-top:0;"allow="geolocation"></iframe>
+                      <iframe src="https://mask.livecorona.co.kr/?utm_source=livecod_main&utm_medium=iframe&utm_campaign=maskmap_embed" frameborder="0" style="border:0;width:100%;height:35rem;padding-top:0;"allow="geolocation"></iframe>
                       <div class="p-2">
-                        <a type="button" class="btn btn-block btn-info" href="https://mask.livecorona.co.kr" target="_blank" rel="noopener noreferrer">큰 화면에서 마스크 맵 열기</a>
+                        <a type="button" class="btn btn-block btn-info" href="https://mask.livecorona.co.kr/?utm_source=livecod_main&utm_medium=button&utm_campaign=maskmap_large_screen" target="_blank" rel="noopener noreferrer">큰 화면에서 마스크 맵 열기</a>
                       </div>
                     </div>
                   </div>
