--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
   <link href="css/livecod-custom.css" rel="stylesheet">
   <link href="css/livecod-lsy.css" rel="stylesheet">
+  <link href="css/simulator.css" rel="stylesheet" >
 </head>
 <!-- Page Heading -->
 
@@ -676,6 +677,37 @@
                       </p>
                       <div class="source"><span class="title">출처</span><span class="desc">lancet 논문 '<a target="_blank" href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(20)30260-9/fulltext">Nowcasting and forecasting the potential domestic and
                             international spread of the 2019-nCoV outbreak originating in Wuhan, China: a modelling study</a>'</span></div>
+
+                            <!-- <div class="covid-simulator">
+                          		<ul class="covid-status">
+                          			<li class="recovered">
+                          				<div class="label">완치 <span class="count">0</span></div>
+                          				<div class="bar-container">
+                          					<div class="bar"></div>
+                          				</div>
+                          			</li>
+                          			<li class="healthy">
+                          				<div class="label">건강 <span class="count">200</span></div>
+                          				<div class="bar-container">
+                          					<div class="bar"></div>
+                          				</div>
+                          			</li>
+                          			<li class="sick">
+                          				<div class="label">감염 <span class="count">0</span></div>
+                          				<div class="bar-container">
+                          					<div class="bar"></div>
+                          				</div>
+                          			</li>
+                          		</ul>
+                          		<div class="graph-canvas-container">
+                          			<canvas class="graph-canvas" width="2000" height="200"></canvas>
+                          		</div>
+                          		<div class="canvas-container stop">
+                          			<canvas class="canvas" width="800" height="400"></canvas>
+                          			<button class="simulation-btn">새 시뮬레이션</button>
+                          		</div>
+                          	</div> -->
+
                     </div>
                   </div>
                 </div>
@@ -2072,6 +2104,9 @@
     // 배너를 숨기고 싶으면 아래 코드를 주석처리하세요
     //showBanner();
   </script>
+
+  <!-- <script src="js/simulator.js"></script> -->
+
 
   <!-- 존스홉킨스 전세계 누적데이터 -->
   <script src="data/HopkinsCoronaWorldData.js"></script>
