제주 확진자 +1

--- a/index.html
+++ b/index.html
@@ -2005,7 +2005,7 @@
   <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
   <!-- Page level custom scripts -->
-  <script src="js/demo/datatables-demo.js"></script>
+  <!-- <script src="js/demo/datatables-demo.js"></script> -->
 
   <!-- 제주 진료소 관련 스크립트 -->
   <script src="js/jejuMedicalCenter.js"></script>
