--- a/index.html
+++ b/index.html
@@ -872,11 +872,11 @@
 
                         <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://gis.jeju.go.kr/crn/index.do" role="button">제주도청 제공 확진자 이동동선 및 안심존</a>
 
-                        <p>위 링크에서 지도로 확진자 이동경로를 도청에서 직접 제공하고 있으므로, <span style="color:red; font-weight:bold;">아래 내용은 더이상 업데이트 하지 않습니다.</span></p>
-
-                        <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="http://me2.do/5vRzTwqq" role="button">제주도청 제공 5번째 확진자 동선</a>
+                        <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://www.jeju.go.kr/files/convert/202003/20dc7b43-ca8b-4303-a135-ace0b2a10e73.hwp.htm" role="button">제주도청 제공 7번째 확진자 동선</a>
 
                         <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://www.jeju.go.kr/files/convert/202003/bb3ae6fe-1921-420e-bda1-d029a77296b4.hwp.htm" role="button">제주도청 제공 6번째 확진자 동선</a>
+
+                        <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="http://me2.do/5vRzTwqq" role="button">제주도청 제공 5번째 확진자 동선</a>
 
                         <!-- 확진자 News 4 -->
                         <div class="card">
