7번째 확진자 경로 추가

--- a/index.html
+++ b/index.html
@@ -372,10 +372,10 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body" id="Top5">
-                  <div id="collapseTop15" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
-                    <!-- 그래프 그려지는 공간 -->
+                  <!-- <div id="collapseTop15" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
+
                     <div style="height:35rem;"><canvas id="top15graph"></canvas></div>
-                  </div>
+                  </div> -->
                   <div class="korea_chart_tags">
                     <span class="tag_04">격리자수</span>
                     <span class="tag_02">완치자수</span>
@@ -516,7 +516,7 @@
                     <div class="progress-bar bg-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" ></div>
                   </div>
-                  <a target="_blank" class="btn btn-primary" style="width:100%; margin-top:1rem; margin-bottom:1rem;" href="./index_world_chart.html" role="button">각 나라별 일일차트 크게보기</a>
+                  <!-- <a target="_blank" class="btn btn-primary" style="width:100%; margin-top:1rem; margin-bottom:1rem;" href="./index_world_chart.html" role="button">각 나라별 일일차트 크게보기</a> -->
                 </div>
               </div>
             </div>
