--- a/index.html
+++ b/index.html
@@ -1900,7 +1900,8 @@
 
   <script src="data/worldData.js"></script>
   <script src="data/koreaRegionalData.js"></script>
-  <script src="data/koreaRegionalCumulativeData.js"></script>
+  <!-- <script src="data/koreaRegionalCumulativeData.js"></script> -->
+  <script src="data/koreaTotalCumulativeData.js"></script>
   <script src="data/worldCumulativeData.js"></script>
   <script src="totalDataSet.js"></script>
 
