--- a/index.html
+++ b/index.html
@@ -872,11 +872,61 @@
 
                         <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://gis.jeju.go.kr/crn/index.do" role="button">제주도청 제공 확진자 이동동선 및 안심존</a>
 
-                        <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://www.jeju.go.kr/files/convert/202003/20dc7b43-ca8b-4303-a135-ace0b2a10e73.hwp.htm" role="button">제주도청 제공 7번째 확진자 동선</a>
+                        <!-- 확진자 News 8 -->
+                        <div class="card">
+                          <div class="card-header" id="headingFour">
+                            <h2 class="mb-0 cases-title">
+                              <a target="_blank" href="https://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1237042">
+                                <button class="btn btn-link" type="button">
+                                  여덟번째 확진자
+                                </button>
+                              </a>
+                            </h2>
+                          </div>
+                        </div>
+                        <!-- //확진자 News 8 -->
 
-                        <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://www.jeju.go.kr/files/convert/202003/bb3ae6fe-1921-420e-bda1-d029a77296b4.hwp.htm" role="button">제주도청 제공 6번째 확진자 동선</a>
+                        <!-- 확진자 News 7 -->
+                        <div class="card">
+                          <div class="card-header" id="headingFour">
+                            <h2 class="mb-0 cases-title">
+                              <a target="_blank" href="https://www.jeju.go.kr/files/convert/202003/20dc7b43-ca8b-4303-a135-ace0b2a10e73.hwp.htm">
+                                <button class="btn btn-link" type="button">
+                                  일곱번째 확진자
+                                </button>
+                              </a>
+                            </h2>
+                          </div>
+                        </div>
+                        <!-- //확진자 News 7 -->
 
-                        <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="http://me2.do/5vRzTwqq" role="button">제주도청 제공 5번째 확진자 동선</a>
+                        <!-- 확진자 News 6 -->
+                        <div class="card">
+                          <div class="card-header" id="headingFour">
+                            <h2 class="mb-0 cases-title">
+                              <a target="_blank" href="https://www.jeju.go.kr/files/convert/202003/bb3ae6fe-1921-420e-bda1-d029a77296b4.hwp.htm">
+                                <button class="btn btn-link" type="button">
+                                  여섯번째 확진자
+                                </button>
+                              </a>
+                            </h2>
+                          </div>
+                        </div>
+                        <!-- //확진자 News 6 -->
+
+                        <!-- 확진자 News 5 -->
+                        <div class="card">
+                          <div class="card-header" id="headingFour">
+                            <h2 class="mb-0 cases-title">
+                              <a target="_blank" href="http://me2.do/5vRzTwqq">
+                                <button class="btn btn-link" type="button">
+                                  다섯번째 확진자
+                                </button>
+                              </a>
+                            </h2>
+                          </div>
+                        </div>
+                        <!-- //확진자 News 5 -->
 
                         <!-- 확진자 News 4 -->
                         <div class="card">
