트러블 슈팅

--- a/index.html
+++ b/index.html
@@ -372,10 +372,12 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body" id="Top5">
-                  <!-- <div id="collapseTop15" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
+
+                  <!-- 각 나라별 그래프 -->
+                  <div id="collapseTop15" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
 
                     <div style="height:35rem;"><canvas id="top15graph"></canvas></div>
-                  </div> -->
+                  </div>
                   <div class="korea_chart_tags">
                     <span class="tag_04">격리자수</span>
                     <span class="tag_02">완치자수</span>
