상세현황 수정

--- a/index.html
+++ b/index.html
@@ -195,10 +195,9 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <h6>국내현황</h6>
+                  <h6>국내현황 : <span class="koreanText"></span>명</h6>
                   <div class="small font-weight-bold">
-                    <span class="float-right mb-2">(확진자
-                      <span class="koreanText"></span>명/격리자
+                    <span class="float-right mb-2">(격리자
                       <span class="koreanText yellow"></span>명/완치자
                       <span class="koreanText green"></span>명/사망자
                       <span class="koreanText red"></span>명)
@@ -209,10 +208,9 @@
                     <div class="progress-bar bg-success koreanChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="bottom"></div>
                     <div class="progress-bar bg-danger koreanChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="bottom"></div>
                   </div>
-                  <h6>세계현황</h6>
+                  <h6>세계현황 : <span class="worldText"></span>명</h6>
                   <div class="small font-weight-bold">
-                    <span class="float-right mb-2">(확진자
-                      <span class="worldText"></span>명/격리자
+                    <span class="float-right mb-2">(격리자
                       <span class="worldText yellow"></span>명/완치자
                       <span class="worldText green"></span>명/사망자
                       <span class="worldText red"></span>명)
