--- a/index.html
+++ b/index.html
@@ -709,6 +709,25 @@
                           </div>
                         </div>
 
+                        <div class="row">
+                          <div class="col-md-3">
+                            <!-- simulation-btn-60-2time btn btn-info -->
+                            <button class="" style="width:100%;margin-bottom:10px;">60% 사회적 거리두기 2회 시뮬레이션(준비중)</button>
+                          </div>
+                          <div class="col-md-3">
+                            <!-- simulation-btn-80-2time btn btn-info -->
+                            <button class="" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 2회 시뮬레이션(준비중)</button>
+                          </div>
+                          <div class="col-md-3">
+                            <!-- simulation-btn-60-3time btn btn-info -->
+                            <button class="" style="width:100%;margin-bottom:10px;">60% 사회적 거리두기 3회 시뮬레이션(준비중)</button>
+                          </div>
+                          <div class="col-md-3">
+                            <!-- simulation-btn-80-3time btn btn-info -->
+                            <button class="" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 3회 시뮬레이션(준비중)</button>
+                          </div>
+                        </div>
+
                         <div class="canvas-container stop">
                           <canvas class="canvas" width="800" height="400"></canvas>
                         </div>
@@ -2186,6 +2205,7 @@
   <script src="simulator/30per_stop_script.js"></script>
   <script src="simulator/50per_stop_script.js"></script>
   <script src="simulator/80per_stop_script.js"></script>
+  <script src="simulator/80per_stop_script_2times.js"></script>
 
 
   <!-- 존스홉킨스 전세계 누적데이터 -->
